# ProjectTemplate

./: CMakeLists.txt  README.md
include/: template.h
src/: template.cpp
test/: CMakeLists.txt
test/test1/: CMakeLists.txt  main.cxx
